--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -21,7 +21,7 @@
       <mat-form-field style="margin-right: 20px;">
         <input type="text" matInput placeholder="Enter an ID here" [formControl]="id" />
       </mat-form-field>
-      <button type="button" mat-raised-button (click)="updateFormID()">Fetch form</button>
+      <button type="button" mat-raised-button (click)="updateFormID(id.value)">Fetch form</button>
       <br />
       <p style="font-size: 12px;line-height: 1.4em;">This field defaults to your profile ID if left blank.</p>
     </form>
@@ -31,7 +31,7 @@
       <mat-form-field style="margin-right: 20px;">
         <input type="text" matInput placeholder="Enter an ID here" [formControl]="sid" />
       </mat-form-field>
-      <button type="button" mat-raised-button (click)="makeSpecificForm()">Create form</button>
+      <button type="button" mat-raised-button (click)="makeSpecificForm(sid.value)">Create form</button>
       <br />
       <p style="font-size: 12px;line-height: 1.4em;">This field defaults to your profile ID if left blank.</p>
     </form>
