--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,13 @@
 <div class="main">
   <app-ui-top-navigation></app-ui-top-navigation>
-  <div class="mobile-container" *ngIf="!auth.isAuthenticated()">
-    <app-home></app-home>
-  </div>
-  <div class="mobile-container" *ngIf="auth.isAuthenticated()">
-    <router-outlet></router-outlet>
+  <div class="mobile-container">
+    <div *ngIf="!auth.isAuthenticated()">
+      <app-home></app-home>
+    </div>
+    <div *ngIf="auth.isAuthenticated()">
+      <app-home></app-home>
+      <router-outlet></router-outlet>
+    </div>
   </div>
   <app-footer></app-footer>
 </div>
