--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,19 @@
 <div class="main">
-  <app-ui-top-navigation></app-ui-top-navigation>
   <div class="mobile-container">
     <div *ngIf="!auth.isAuthenticated()">
-      <app-home></app-home>
-    </div>
-    <div *ngIf="auth.isAuthenticated()">
-      <app-home></app-home>
-      <router-outlet></router-outlet>
+      <app-ui-top-navigation></app-ui-top-navigation>
     </div>
   </div>
+  <div *ngIf="auth.isAuthenticated()">
+    <app-ui-top-navigation></app-ui-top-navigation>
+  </div>
+
+  <div *ngIf="auth.isAuthenticated()">
+    <router-outlet></router-outlet>
+  </div>
+  <div *ngIf="!auth.isAuthenticated()">
+    <app-home></app-home>
+  </div>
+
   <app-footer></app-footer>
 </div>
