--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -101,10 +101,10 @@
     Save Changes
   </button>
   <br /><br />
-  <div class="bordered" *ngIf="!showOldForm">
-    <button *ngIf="!firstSave" mat-raised-button style="background-color: #663333; color:white" (click)="replaceForm()">
+  <div class="bordered" *ngIf="!showOldForm && !firstSave">
+    <button mat-raised-button style="background-color: #663333; color:white" (click)="replaceForm()">
       Replace contents to use updated form
     </button>
-    <p style="color:#999999; font-size:10px;"><i>Use this button if you've made changes to your form since adding the item.</i></p>
+    <p style="font-size:13px;"><i>Use this button if you've made changes to your form since adding the item.</i></p>
   </div>
 </div>
