--- a/src/app/leaderboard/leaderboard.component.html
+++ b/src/app/leaderboard/leaderboard.component.html
@@ -17,7 +17,7 @@
       <mat-list-item>
         <mat-icon style="color: #663333" mat-list-icon>warning</mat-icon>
         <h4 style="font-weight:bold" mat-line>No items found.</h4>
-        <p mat-line>Uh-oh! Looks like you haven't made any items yet. <a style="color: #669966" routerLink="/item" routerLinkActive="active">Make an item here.</a>
+        <p mat-line>Uh-oh! Looks like you haven't made any items yet. <a style="color: #669966" routerLink="/item" routerLinkActive="active">Make an item here.</a><br /> If you know there are items, try clicking the "Refresh" button.
         </p>
       </mat-list-item>
     </mat-list>
