--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -41,6 +41,7 @@
       </div>
       <div *ngIf="field.type === 'radio' && !field.disabled">
         <p>{{ field.question }}</p>
+        <p style="color:#999999">Selected: {{ field.value }}</p>
         <mat-radio-group class="column-layout" name="radiofield" [(ngModel)]="field.value">
           <mat-radio-button *ngFor="let optionR of field.options" [value]="optionR.value">{{ optionR.helperText }}</mat-radio-button>
         </mat-radio-group>
