Number is added as a potential field! Woohoo

--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -41,8 +41,7 @@
       <mat-list-item>
         <mat-icon style="color: #663333" mat-list-icon>warning</mat-icon>
         <h4 style="font-weight:bold" mat-line>No form found.</h4>
-        <p mat-line>Uh-oh! We can't find that form in the database. Check the spelling and capitalization. Or, make a new
-          form with the button above.</p>
+        <p mat-line>Uh-oh! We can't find that form in the database. Check the spelling and capitalization. Or, make a new form with the button above.</p>
       </mat-list-item>
     </mat-list>
   </div>
