--- a/src/app/form/dialog/dialog.html
+++ b/src/app/form/dialog/dialog.html
@@ -35,12 +35,12 @@
         <form class="form-horizontal" style="border:1px solid grey; padding:20px;">
           <mat-form-field>
             <h4>Display Name</h4>
-            <input matInput [(ngModel)]="optionsHelperText" name="helperText">
+            <input matInput type="text" [(ngModel)]="optionsHelperText" name="helperText">
             <mat-hint>Text to show for this option</mat-hint>
           </mat-form-field>
           <mat-form-field>
             <h4>Value</h4>
-            <input matInput [(ngModel)]="optionsValue" name="optionValue">
+            <input matInput type="number" [(ngModel)]="optionsValue" name="optionValue">
             <mat-hint>Value of this option (number for radio and dropdowns, for checkboxes 0=unchecked 1=checked)</mat-hint>
           </mat-form-field>
           <br />
