--- a/src/app/form/dialog/dialog.html
+++ b/src/app/form/dialog/dialog.html
@@ -36,12 +36,12 @@
           <mat-form-field>
             <h4>Display Name</h4>
             <input matInput type="text" [(ngModel)]="optionsHelperText" name="helperText">
-            <mat-hint align="start">Text to show for this option</mat-hint>
+            <mat-hint>Text to show for this option</mat-hint>
           </mat-form-field>
           <mat-form-field>
             <h4>Value</h4>
             <input matInput type="number" [(ngModel)]="optionsValue" name="optionValue">
-            <mat-hint align="start">Value of this option (number for radio and dropdowns, for checkboxes 0=unchecked 1=checked)</mat-hint>
+            <mat-hint>Value of this option (number for radio and dropdowns, for checkboxes 0=unchecked 1=checked)</mat-hint>
           </mat-form-field>
           <br />
           <br />
